cleaned data for running project, added mark of expensive ingredient for some recipe.

--- a/favourite_tastebook/recipe_manager/static/css/style.css
+++ b/favourite_tastebook/recipe_manager/static/css/style.css
@@ -142,6 +142,10 @@ body {
     max-height: 80vh;
     overflow-y: auto;
 }
+.mandatory-ingredient {
+    border: 3px solid #00d8ff !important;
+}
+
 
 .block {
     background: #ffffff;
