start pos for second development with some problems, that need to fix

--- a/favourite_tastebook/recipe_manager/static/css/style.css
+++ b/favourite_tastebook/recipe_manager/static/css/style.css
@@ -143,9 +143,12 @@ body {
     overflow-y: auto;
 }
 .mandatory-ingredient {
-    border: 3px solid #00d8ff !important;
+    border: 3px solid #0016ff !important;
 }
 
+.favorite-highlight {
+    border: 2px solid orange;
+}
 
 .block {
     background: #ffffff;
